<resources>
    <string name="app_name">L04__Reservation_App</string>
    <string name="size">Size of group:</string>
    <string name="name">Name:</string>
    <string name="number">Phone number:</string>
    <string name="confirm">Confirm Booking</string>
    <string name="reset">RESET</string>
    <string name="smoke">Smoking Area</string>
    <string name="nsmoke">Non Smoking Area</string>
</resources>